@@ -1,3 +1,8 @@
+2024-03-12  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/functions.R (HTMLrm): add function, which removes
+        HTML tags
+
 2024-01-31  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (.ASCII.control.rx): add but do not
